fixed z-index from searchpage

--- a/client/src/components/SearchPage/SearchPage.module.css
+++ b/client/src/components/SearchPage/SearchPage.module.css
@@ -10,7 +10,7 @@
  .busqueda {
    margin: 0%;
    margin-top: 7%;
-   z-index: -1;
+   z-index: 0;
  }
 
  .titulo {
@@ -26,5 +26,5 @@
   display: flex;
   justify-content: center;
   margin-top: -5%;
-  z-index: 0;
+  z-index: 1;
  }
